# cmakestudy

./: README.txt
example/: CMakeLists.txt  main.cpp
example/subdir/: CMakeLists.txt  main.cpp
example/win32/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/modules/: AutoGroup.cmake
